third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/specs/update_field_ok.exp
module 0x42::update_field_ok {
    struct R {
        x: u64,
        y: u64,
    }
    fun f(r: &mut R) {
        &mut r.x = 1;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid assignment
  ┌─ update_field_ok.move:7:9
  │
7 │         &mut r.x = 1;
  │         ^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
